--- a/index.html
+++ b/index.html
@@ -372,13 +372,10 @@
               <button class="button" data-dismiss="modal" aria-hidden="true">OK</button>
             </div>
             <div class="deleteinf hide">
-              <button class="button" data-dismiss="" aria-hidden="true">YES</button>
-              <button class="button" data-dismiss="modal" aria-hidden="true">NO</button>
+              <button class="button" data-dismiss="modal"  id="yes" aria-hidden="true">YES</button>
+              <button class="button" data-dismiss="modal"  id="no" aria-hidden="true">NO</button>
             </div>
-             <div class="deletefirewall hide">
-              <button class="btn confirm" id="yes" data-dismiss="modal" aria-hidden="true">YES</button>
-              <button class="btn confirm" id="no" data-dismiss="modal" aria-hidden="true">NO</button>
-            </div>
+           
           </div>
           <!-- Sites Page Inner Content End================================================== -->
         </div>
@@ -445,7 +442,7 @@
   <br /><br />
 <div class="box">
   <form action="#" id="form" name="form">
-    <div class="row-fluid"><div class="span2 span2_device"><b>Device Name:</b></div><div class="span2"><input type="text" class="input-medium" name="name" value="{name}" placeholder="My Device Name" data-error-style="inline"/></div></div>
+    <div class="row-fluid"><div class="span2 span2_device"><b>Device Name:</b></div><div class="span2"><input type="text" class="input-medium" name="name" value="{name}" placeholder="My Device Name" /></div></div>
     <div class="row-fluid"><div class="span2 span2_device"><b>Device ID:</b></div><div class="span2"><input type="text" class="input-medium" name="id" value="{id}" readonly="readonly"/></div></div>
     <div class="row-fluid"><div class="span2 span2_device"><b>Type:</b></div><div class="span2"><input type="text" class="input-medium" name="type" value="{type}" readonly="readonly"/></div></div>
     <div class="row-fluid"><div class="span2 span2_device"><b>Status:</b></div><div class="span2"><input type="text" class="input-medium" name="status" value="{status}" readonly="readonly"/></div></div>
@@ -472,8 +469,8 @@
   <div class="span4 desc"><b>{description}</b></div>
   <div class="span2 rule_col3"><b>Rule : {action}</b></div>
 <div class="span4">
-<a href="#" class="button edit editRule" width="38" height="38" class="" title ="Edit Rule">Edit Rule</a>
-<a href="#" class="button delete removeRule" width="38" height="38" title="Delete Rule">Delete</a>
+<a href="#edit" class="button edit editRule" width="38" height="38" class="" title ="Edit Rule">Edit Rule</a>
+<a href="#del" class="button delete removeRule" width="38" height="38" title="Delete Rule">Delete</a>
 </div>
 </div>
 </script>
@@ -960,8 +957,9 @@ JavaScript below!                              -->
 <script src="js/app.js"></script>
 <script src="js/jquery.toggle.buttons.js"></script>
 <script src="js/underscore.js"></script>
-<script src="js/backbone.js"></script>
+<script src="js/backbone-min.js"></script>
 <script src="js/backbone-validation.js"></script>
+<script src="js/backbone.validation.bootstrap.js"></script>
 <script src="js/dust-full-1.2.0.js"></script> 
 <script src="js/dust-helpers.js"></script>
 <script src="js/bootstrap.js"></script>
